# tree-sitter-smarty

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-smarty.pc.in
bindings/c/tree_sitter/: tree-sitter-smarty.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_smarty/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSmartyTests/: TreeSitterSmartyTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  literals.txt  modifiers.txt  tags.txt  variables.txt
